--- a/app/src/main/res/layout/set_new_alarm_layout.xml
+++ b/app/src/main/res/layout/set_new_alarm_layout.xml
@@ -133,7 +133,7 @@
             android:layout_marginTop="10dp"
             android:id="@+id/lblSnooze"/>
 
-        <ToggleButton
+        <Switch
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:textSize="10dp"
