--- a/app/src/main/res/layout/my_alarm_item.xml
+++ b/app/src/main/res/layout/my_alarm_item.xml
@@ -19,15 +19,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/my_alarm_repeat_item"
+            android:layout_marginLeft="200dp"
+            android:layout_marginRight="50dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:layout_marginLeft="250dp"
             android:layout_marginRight="50dp"
             android:id="@+id/my_alarm_steps_item"/>
-        <ToggleButton
+        <Switch
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:id="@+id/my_alarm_toggleButton_item"/>
+            android:id="@+id/my_alarm_switchButton_item"/>
 
     </LinearLayout>
 
