--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,25 +19,18 @@
             android:id="@+id/listOfAlarms">
         </ListView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:layout_marginBottom="30dp"
-        >
+
         <Button
             android:id ="@+id/btnNewAlarm"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:text="+"
             android:background="@drawable/roundedbutton"
-            android:padding="15dp"
             android:textColor="@android:color/white"
             android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
             android:textSize="30dp"
+            android:layout_gravity="right|bottom"
             />
-    </LinearLayout>
 
-
-</LinearLayout>
+</FrameLayout>
